auth handlers not as routes
